# mortyps

morty-backend/: .gcloudignore  index.yaml  main.py  requirements.txt
morty-backend/static/: index.html  style.css
morty-beacon/: Cargo.toml  deploy.sh  sdkconfig.defaults
morty-beacon/src/: main.rs
morty-gateway/: Cargo.toml  deploy.sh  sdkconfig.defaults
morty-gateway/.cargo/: config.toml
morty-gateway/src/: main.rs
morty-gps/: Cargo.toml  deploy.sh
morty-gps/.cargo/: config.toml
morty-gps/src/: main.rs
morty-rs/: Cargo.toml  build.rs
morty-rs/.cargo/: config.toml
morty-rs/src/: comm.rs  led.rs  lib.rs  morty.proto  utils.rs
